# shopping-list

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy-dev.yml  deploy.yml
app/: __init__.py  categories.py  config.py  db.py  global_prices.py  models.py  parsing.py  pricing.py  receipts.py  services.py  stats.py
app/bot/: handlers.py  i18n.py  main.py
app/jobs/: __init__.py  fetch_prices.py
app/web/: i18n.py  main.py  routes.py
app/web/static/: app.css  app.js
app/web/templates/: base.html  categories.html  deleted.html  item.html  list.html  stats.html  trips.html
docs/: auto-deploy-cron.md  price-fetch-cron.md  user-guide-he.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_user_approval.py  0003_user_language.py  0004_pending_items.py  0005_item_from_pending.py  0006_global_products.py  0007_suggestion_category.py  0008_draft_list.py  0009_unit_choice.py  0010_receipt_draft.py
mockups/: completed.html  index.html  list.html  mockup.css  stats.html  telegram.html
scripts/: auto_deploy.sh  install-auto-deploy-cron.sh  install-cron.sh  recategorize_items.py  seed_global_products.py
tests/: test_admin_export.py  test_categories.py  test_global_prices.py  test_parsing.py  test_pricing.py  test_receipts.py  test_report_link.py  test_services.py  test_stats_averages.py  test_stats_drilldowns.py  test_stats_trips.py  test_web_variant.py  test_weighed_estimate.py  test_weighed_pricing.py
