[project]
name = "shopping-list"
version = "0.1.0"
description = "Telegram-driven shopping list with a web app, learned price predictions, and spend statistics"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "jinja2>=3.1",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
